--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@yzt/get_url_params",
-  "version": "1.0.1",
+  "name": "@yzt/get_url_param",
+  "version": "1.0.6",
   "description": "获取url参数中的方法",
   "main": "getParms.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "uglify": "uglifyjs ./getParms.js -o ./getParms.min.js",
+    "uglify": "uglifyjs ./getParms.js -o ./getParms.min.j",
     "transfer": "babel ./getParms.js -o ./getParms.js"
   },
   "repository": {
